- added missing cross compiling stuff (2021/04/07 MS)
- allow using SPACE to open cards (2019/11/25 MS)

2.1:
- added two-player mode and cpu opponent
- added triplets and quadruplets
- fixed bug in error counting
- renamed score to pairs

2.0:
- initial public release