@@ -27,6 +27,7 @@ Config::Config()
 	setsize = 1;
 	matchsize = 2;
 	closedelay = 3;
+	motifcaption = 1; /* on shift is default */
 
 	/* sounds */
 	sound = 1;
@@ -64,6 +65,7 @@ Config::Config()
 	fp.get( "setsize", setsize );
 	fp.get( "matchsize", matchsize );
 	fp.get( "closedelay", closedelay );
+	fp.get( "motifcaption", motifcaption );
 	fp.get( "sound", sound );
 	fp.get( "volume", volume );
 	fp.get( "speech", speech );
@@ -94,6 +96,7 @@ void Config::save()
 	ofs << "setsize=" << setsize << "\n";
 	ofs << "matchsize=" << matchsize << "\n";
 	ofs << "closedelay=" << closedelay << "\n";
+	ofs << "motifcaption=" << motifcaption << "\n";
 	ofs << "sound=" << sound << "\n";
 	ofs << "volume=" << volume << "\n";
 	ofs << "speech=" << speech << "\n";
